fix: improve splash section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -125,6 +125,22 @@ a {
 	text-shadow: 0 0 10px #000, 0 0 10px #000, 0 0 10px #000, 0 0 10px #000;
 }
 
+
+@media all and (max-width: 500px) {
+	.socialbuttons {
+		bottom: 30px;
+	}
+	.splash.section .copyright {
+		left: 0px;
+		text-align: center;
+		font-size: 12px;
+	}
+	.splash .wrapper p {
+		text-align: center;
+		margin: 60px 0 120px;
+	}
+}
+
 .main-footer {
 	background-color: #f2f2f2;
 	color: #66;
